# python-nonobot

./: .gitignore  .testr.conf  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
nonobot/: __init__.py  base.py  main.py  utils.py
nonobot/plugins/: __init__.py  bug.py  foo.py  gerrit.py  groupalias.py  seen.py  urban.py
tests/: fixtures.py  sample1.py  sample2.py  test_base.py  test_main.py  test_plugin_bug.py  test_plugin_groupalias.py  test_plugin_seen.py  test_plugin_urban.py  test_plugins.py  test_utils.py
