[metadata]
name = python-nonobot
summary = Nono the dumb bot
description-file = README.md
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = bot jabber groupchat
author = Chmouel Boudjnah
author-email = chmouel@chmouel.com
home-page = https://github.com/chmouel/python-nonobot

[files]
packages =
    nonobot

[entry_points]
console_scripts =
    nonobot = nonobot.main:main

nonobot.plugins =
      bug = nonobot.plugins.bug
      groupalias = nonobot.plugins.groupalias
      seen = nonobot.plugins.seen
      urban = nonobot.plugins.urban
      gerrit = nonobot.plugins.gerrit
